apps/livecomp/server-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: livecomp-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: livecomp-server
  serviceName: livecomp-server
  template:
    metadata:
      labels:
        app: livecomp-server
    spec:
      containers:
      - name: app
        image: ghcr.io/roboticsoutreach/livecomp-server:latest-1739712948 # {"$imagepolicy": "flux-system:livecomp-server"}
        resources:
          requests:
            memory: 500Mi
            cpu: 200m
          limits:
            memory: 1Gi
            cpu: 750m
        securityContext:
          allowPrivilegeEscalation: false
          runAsNonRoot: true
          runAsUser: 1001
          runAsGroup: 1001
        ports:
        - containerPort: 3000
          name: http
        volumeMounts:
        - name: db-local
          mountPath: /.local
      volumes:
      - name: db-local
        emptyDir: {}
