apps/livecomp/client-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: livecomp-client
spec:
  selector:
    app: livecomp-client
  ports:
  - port: 80
    targetPort: http
