apps/livecomp/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgresql
spec:
  selector:
    app: postgresql
  ports:
  - targetPort: psql
    port: 5432
