apps/livecomp/server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: livecomp-server
spec:
  selector:
    app: livecomp-server
  ports:
  - port: 80
    targetPort: http
